--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a48474">  <td>18/02/08 16:30:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.setup()[pri:0, instance:com.tmv.test.SampleTMV@475530b9]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
-<tr bgcolor="a097cc">  <td>18/02/08 16:30:36</td>   <td>7113</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTMV.testTmv()[pri:0, instance:com.tmv.test.SampleTMV@475530b9]">testTmv</td> 
-  <td>main@1926764753</td>   <td></td> </tr>
+<tr bgcolor="e8a876">  <td>18/02/12 09:17:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.setup()[pri:0, instance:com.tmv.test.SampleTMV@4c70fda8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="e8a876">  <td>18/02/12 09:18:47</td>   <td>49265</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.tearDown()[pri:0, instance:com.tmv.test.SampleTMV@4c70fda8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="a097cc">  <td>18/02/12 09:18:06</td>   <td>8372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTMV.testTmv()[pri:0, instance:com.tmv.test.SampleTMV@4c70fda8]">testTmv</td> 
+  <td>main@1846896625</td>   <td></td> </tr>
 </table>
