--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e8a876">  <td>18/02/13 10:51:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.setup()[pri:0, instance:com.tmv.test.SampleTMV@4c70fda8]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>18/02/13 10:52:03</td>   <td>51981</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.tearDown()[pri:0, instance:com.tmv.test.SampleTMV@4c70fda8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
-<tr bgcolor="a097cc">  <td>18/02/13 10:51:19</td>   <td>8285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTMV.testTmv()[pri:0, instance:com.tmv.test.SampleTMV@4c70fda8]">testTmv</td> 
-  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>18/02/14 20:17:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.setup()[pri:0, instance:com.tmv.test.SampleTMVTest@26653222]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>18/02/14 20:18:44</td>   <td>53819</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.tearDown()[pri:0, instance:com.tmv.test.SampleTMVTest@26653222]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1273765644</td>   <td></td> </tr>
+<tr bgcolor="b4c3ab">  <td>18/02/14 20:17:57</td>   <td>7422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTMVTest.testTmv()[pri:0, instance:com.tmv.test.SampleTMVTest@26653222]">testTmv</td> 
+  <td>main@1273765644</td>   <td></td> </tr>
 </table>
